<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ProfileFragment">
    <Switch
            android:text="pracownik"
            android:layout_width="140dp"
            android:layout_height="58dp" android:id="@+id/employeeLogin"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.879" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:visibility="visible"/>
    <EditText
            android:layout_width="234dp"
            android:layout_height="67dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextTextEmailAddress"
            android:autoText="true"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="152dp"
            app:layout_constraintHorizontal_bias="0.497" android:hint="email"/>
    <EditText
            android:layout_width="234dp"
            android:layout_height="69dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:hint="password"/>
    <Button
            android:text="Login"
            android:layout_width="105dp"
            android:layout_height="wrap_content" android:id="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.302" app:cornerRadius="25dp" android:textColor="#FFFFFF"
            android:textSize="12sp" android:layout_marginRight="15dp"/>
    <Button
            android:text="Register"
            android:layout_width="105dp"
            android:layout_height="wrap_content" android:id="@+id/registerButton"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7" app:cornerRadius="25dp" android:textColor="#FFFFFF"
            android:textSize="12sp" android:layout_marginLeft="15dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>