<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/ic_home"
            android:icon="@drawable/home"
            android:title="@string/home"/>

    <item
            android:id="@+id/ic_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart"/>

    <item
            android:id="@+id/ic_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile"/>

</menu>