...
            android:layout_height="50dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout">
        <Button
                android:text="Buy Now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/buyButton" android:layout_weight="1"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" app:cornerRadius="25dp"
                android:textColor="#FFFFFF" android:enabled="false"/>
        <Button
                android:text="Reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/resevreButton" android:layout_weight="1"
                app:cornerRadius="25dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                android:textColor="#FBFBFB" android:enabled="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
